Added static sites, new MapRoute, Glimpse

--- a/Shop/Prototype/Category.html
+++ b/Shop/Prototype/Category.html
@@ -204,7 +204,7 @@
 			<div id="footerLogo">
         </div>
             <div id="footerCopyright">
-                Copyright &copy; 2019 ShopA
+                Copyright &copy; 2019 Shop
             </div>
     </footer>
 </body>
